{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 16,
  "lineage": "18bb85a5-00cb-ab06-5427-901784c9cfa5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-01-31T15:14:52.638-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/calm-premise-168420/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/global/networks/fortify-custom",
            "priority": 455,
            "project": "calm-premise-168420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/global/firewalls/allow-icmp",
            "source_ranges": [
              "189.19.116.13/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.fortify-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-31T15:25:19.023-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/calm-premise-168420/global/firewalls/allow-tcp",
            "log_config": [],
            "name": "allow-tcp",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/global/networks/fortify-custom",
            "priority": 455,
            "project": "calm-premise-168420",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/global/firewalls/allow-tcp",
            "source_ranges": [
              "189.19.116.13/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.fortify-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "fortify-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/calm-premise-168420/global/networks/fortify-custom",
            "mtu": 0,
            "name": "fortify-custom",
            "project": "calm-premise-168420",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/global/networks/fortify-custom"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "fortify-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-31T15:15:04.595-08:00",
            "description": "Main subnet for Fortify",
            "gateway_address": "192.168.0.1",
            "id": "projects/calm-premise-168420/regions/us-west1/subnetworks/fortify-sub",
            "ip_cidr_range": "192.168.0.0/25",
            "name": "fortify-sub",
            "network": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/global/networks/fortify-custom",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "calm-premise-168420",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/calm-premise-168420/regions/us-west1/subnetworks/fortify-sub",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.fortify-custom"
          ]
        }
      ]
    }
  ]
}